<resources>
    <string name="menu">Menu</string>
    <string name="app_name">El-DokKan</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-1316548528485611/4625145765</string>
    <string name="FACEBOOK_APP_ID">340053040143852</string>
    <string name="facebook_login_protocall_name">ak340053040143852</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">9f3cf91b40da5562bc8ee6b69fcbdeb2</string>
    <string name="alert_dialog">Enter Address,we added 30LE for Delivery Service</string>
    <string name="alert_dialogTitle">One More Step</string>
    <string name="order">Order Status</string>
    <string name="cart">Cart</string>
    <string name="fav">Favourites</string>
    <string name="cus">Contact Us</string>
    <string name="signout">Sign Out</string>
    <string name="slogan">We Sell Happiness</string>
    <string name="add">Address</string>
    <string name="com">Comment</string>
    <string name="Register">Register</string>
    <string name="Welcome">Welcome</string>
    <string name="Submit">SUBMIT</string>
    <string name="Phone">Phone number</string>
    <string name="email">E-mail</string>
    <string name="followus">Follow us</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="ship">Shipping : 1-3 Working Days</string>
    <string name="ads">Our Partners</string>
    <string name="cata">Categories</string>
    <string name="swipe">Swipe the item Right To Delete</string>
    <string name="policy">Return Policy: 7 Days </string>
    <string name="prcode">APPLY Code</string>
    <string name="Rate">Number of Ratings : </string>
    <string name="Instabug">9209670647e350b941b7788a49442b70</string>
    <string name="SearchHint">Search</string>
    <string name="changena">Change Name</string>


</resources>
