<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="50dp"
            android:textStyle="bold"
            android:gravity="center"

            />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/slogan"
            android:textSize="24sp" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/FBSign"
            android:text="@string/Register"
            android:background="@color/fbutton_color_midnight_blue"
            android:layout_weight="3"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>