<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".ItemDetail">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:id="@+id/app_bar_layout"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@+id/collapsing"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="#0e0d0e"
            app:expandedTitleTextAppearance="@android:color/background_dark"
            >
            <com.daimajia.slider.library.SliderLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/item_mage"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"

                />
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:layout_collapseMode="parallax"
                >
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <com.andremion.counterfab.CounterFab
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:elevation="6dp"
        android:src="@drawable/ic_add_shopping_cart_black_24dp"
        app:backgroundTint="@color/colorText"
        app:layout_anchor="@+id/app_bar_layout"
        app:layout_anchorGravity="bottom|center"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true" />
    <com.andremion.counterfab.CounterFab
        android:id="@+id/btnRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:elevation="6dp"
        android:src="@drawable/ic_star_black_24dp"
        app:backgroundTint="@color/colorText"
        app:layout_anchor="@+id/app_bar_layout"
        app:layout_anchorGravity="bottom|right"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true" />




    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:id="@+id/nestedScrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/itemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="12dp"
                        android:text="Item Name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layout_price"
                        >

                        <TextView
                            android:id="@+id/itemPrice"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:textAlignment="center"
                            android:text="21"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                          </LinearLayout>
                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:id="@+id/number_btn"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="18dp"
                        app:textSize="8sp"
                        app:backGroundColor="@android:color/black"
                        android:layout_gravity="center"
                        app:initialNumber="1"
                        app:finalNumber="120"
                        />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Please Enter ur Size XS:S:M:L:XL"
                        android:id="@+id/size"
                        />
                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RatingBar

                        android:id="@+id/ratingBar"
                        android:rating="0"
                        android:max="5"
                        android:isIndicator="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Rate"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:id="@+id/numbcount"/>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <TextView
                    android:id="@+id/item_desc"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="Description"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/ship"
                        android:layout_marginTop="12dp"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/ship"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/policy"
                        android:layout_marginTop="12dp"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/policy"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </android.support.v7.widget.CardView>




        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>